--- a/public/css/output.css
+++ b/public/css/output.css
@@ -2275,6 +2275,10 @@ video {
     height: auto;
   }
 
+  .lg\:h-\[500px\] {
+    height: 500px;
+  }
+
   .lg\:w-1\/3 {
     width: 33.333333%;
   }
