--- a/public/css/output.css
+++ b/public/css/output.css
@@ -571,17 +571,11 @@ video {
 .bottom-6 {
   bottom: 1.5rem;
 }
-.bottom-8 {
-  bottom: 2rem;
-}
 .end-5 {
   inset-inline-end: 1.25rem;
 }
 .left-0 {
   left: 0px;
-}
-.left-10 {
-  left: 2.5rem;
 }
 .left-3 {
   left: 0.75rem;
@@ -598,9 +592,6 @@ video {
 .right-4 {
   right: 1rem;
 }
-.right-6 {
-  right: 1.5rem;
-}
 .start-0 {
   inset-inline-start: 0px;
 }
@@ -610,9 +601,6 @@ video {
 .top-0 {
   top: 0px;
 }
-.top-16 {
-  top: 4rem;
-}
 .top-24 {
   top: 6rem;
 }
@@ -621,18 +609,6 @@ video {
 }
 .top-4 {
   top: 1rem;
-}
-.top-6 {
-  top: 1.5rem;
-}
-.-bottom-6 {
-  bottom: -1.5rem;
-}
-.-right-6 {
-  right: -1.5rem;
-}
-.left-1\/2 {
-  left: 50%;
 }
 .z-10 {
   z-index: 10;
@@ -748,9 +724,6 @@ video {
 .mt-auto {
   margin-top: auto;
 }
-.mb-5 {
-  margin-bottom: 1.25rem;
-}
 .line-clamp-2 {
   overflow: hidden;
   display: -webkit-box;
@@ -783,6 +756,9 @@ video {
 }
 .hidden {
   display: none;
+}
+.h-1 {
+  height: 0.25rem;
 }
 .h-10 {
   height: 2.5rem;
@@ -829,9 +805,6 @@ video {
 .h-\[135px\] {
   height: 135px;
 }
-.h-\[28px\] {
-  height: 28px;
-}
 .h-\[450px\] {
   height: 450px;
 }
@@ -846,18 +819,6 @@ video {
 }
 .h-full {
   height: 100%;
-}
-.h-0\.5 {
-  height: 0.125rem;
-}
-.h-1 {
-  height: 0.25rem;
-}
-.h-24 {
-  height: 6rem;
-}
-.h-7 {
-  height: 1.75rem;
 }
 .max-h-\[90vh\] {
   max-height: 90vh;
@@ -898,32 +859,8 @@ video {
 .w-8 {
   width: 2rem;
 }
-.w-\[108px\] {
-  width: 108px;
-}
-.w-\[118px\] {
-  width: 118px;
-}
-.w-\[121px\] {
-  width: 121px;
-}
-.w-\[122px\] {
-  width: 122px;
-}
-.w-\[124px\] {
-  width: 124px;
-}
-.w-\[126px\] {
-  width: 126px;
-}
-.w-\[157px\] {
-  width: 157px;
-}
 .w-\[160px\] {
   width: 160px;
-}
-.w-\[161px\] {
-  width: 161px;
 }
 .w-\[250px\] {
   width: 250px;
@@ -933,12 +870,6 @@ video {
 }
 .w-full {
   width: 100%;
-}
-.w-24 {
-  width: 6rem;
-}
-.w-7 {
-  width: 1.75rem;
 }
 .min-w-full {
   min-width: 100%;
@@ -973,10 +904,10 @@ video {
 .max-w-xl {
   max-width: 36rem;
 }
-.max-w-xs {
-  max-width: 20rem;
-}
 .flex-shrink-0 {
+  flex-shrink: 0;
+}
+.shrink-0 {
   flex-shrink: 0;
 }
 .flex-grow {
@@ -984,10 +915,6 @@ video {
 }
 .grow {
   flex-grow: 1;
-}
-.-translate-x-1\/2 {
-  --tw-translate-x: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .rotate-180 {
   --tw-rotate: 180deg;
@@ -1006,9 +933,6 @@ video {
 }
 .resize {
   resize: both;
-}
-.list-inside {
-  list-style-position: inside;
 }
 .list-decimal {
   list-style-type: decimal;
@@ -1152,6 +1076,12 @@ video {
 .whitespace-nowrap {
   white-space: nowrap;
 }
+.break-words {
+  overflow-wrap: break-word;
+}
+.break-all {
+  word-break: break-all;
+}
 .rounded {
   border-radius: 0.25rem;
 }
@@ -1170,10 +1100,6 @@ video {
 .rounded-r-lg {
   border-top-right-radius: 0.5rem;
   border-bottom-right-radius: 0.5rem;
-}
-.rounded-b-full {
-  border-bottom-right-radius: 9999px;
-  border-bottom-left-radius: 9999px;
 }
 .border {
   border-width: 1px;
@@ -1217,13 +1143,6 @@ video {
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
-}
-.border-green-100 {
-  --tw-border-opacity: 1;
-  border-color: rgb(220 252 231 / var(--tw-border-opacity, 1));
-}
-.border-white\/40 {
-  border-color: rgb(255 255 255 / 0.4);
 }
 .bg-\[\#fcfff5\] {
   --tw-bg-opacity: 1;
@@ -1304,10 +1223,6 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(79 70 229 / var(--tw-bg-opacity, 1));
 }
-.bg-lime-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(190 242 100 / var(--tw-bg-opacity, 1));
-}
 .bg-orange-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(255 237 213 / var(--tw-bg-opacity, 1));
@@ -1382,19 +1297,12 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
+.bg-white\/80 {
+  background-color: rgb(255 255 255 / 0.8);
+}
 .bg-yellow-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(254 249 195 / var(--tw-bg-opacity, 1));
-}
-.bg-green-50 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(240 253 244 / var(--tw-bg-opacity, 1));
-}
-.bg-white\/70 {
-  background-color: rgb(255 255 255 / 0.7);
-}
-.bg-white\/80 {
-  background-color: rgb(255 255 255 / 0.8);
 }
 .bg-opacity-40 {
   --tw-bg-opacity: 0.4;
@@ -1481,6 +1389,11 @@ video {
   --tw-gradient-to: rgb(48 173 209 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
+.from-primary\/10 {
+  --tw-gradient-from: rgb(48 173 209 / 0.1) var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(48 173 209 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
 .from-primary\/20 {
   --tw-gradient-from: rgb(48 173 209 / 0.2) var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(48 173 209 / 0) var(--tw-gradient-to-position);
@@ -1500,20 +1413,6 @@ video {
   --tw-gradient-from: #fff var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(255 255 255 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-.from-transparent {
-  --tw-gradient-from: transparent var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(0 0 0 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-.from-primary\/10 {
-  --tw-gradient-from: rgb(48 173 209 / 0.1) var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(48 173 209 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-.via-primary {
-  --tw-gradient-to: rgb(48 173 209 / 0)  var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), #30add1 var(--tw-gradient-via-position), var(--tw-gradient-to);
 }
 .via-transparent {
   --tw-gradient-to: rgb(0 0 0 / 0)  var(--tw-gradient-to-position);
@@ -1543,6 +1442,9 @@ video {
 .to-pink-600 {
   --tw-gradient-to: #db2777 var(--tw-gradient-to-position);
 }
+.to-primary\/10 {
+  --tw-gradient-to: rgb(48 173 209 / 0.1) var(--tw-gradient-to-position);
+}
 .to-purple-50 {
   --tw-gradient-to: #faf5ff var(--tw-gradient-to-position);
 }
@@ -1557,9 +1459,6 @@ video {
 }
 .to-white {
   --tw-gradient-to: #fff var(--tw-gradient-to-position);
-}
-.to-primary\/10 {
-  --tw-gradient-to: rgb(48 173 209 / 0.1) var(--tw-gradient-to-position);
 }
 .object-contain {
   -o-object-fit: contain;
@@ -1662,6 +1561,10 @@ video {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
 }
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
 .pb-0 {
   padding-bottom: 0px;
 }
@@ -1716,9 +1619,6 @@ video {
 .text-start {
   text-align: start;
 }
-.align-middle {
-  vertical-align: middle;
-}
 .font-montserrat {
   font-family: Montserrat, sans-serif;
 }
@@ -1768,13 +1668,6 @@ video {
   font-size: 0.75rem;
   line-height: 1rem;
 }
-.text-\[15px\] {
-  font-size: 15px;
-}
-.text-7xl {
-  font-size: 4.5rem;
-  line-height: 1;
-}
 .font-bold {
   font-weight: 700;
 }
@@ -1808,20 +1701,17 @@ video {
 .leading-tight {
   line-height: 1.25;
 }
-.leading-none {
-  line-height: 1;
-}
 .tracking-tight {
   letter-spacing: -0.025em;
 }
 .tracking-tighter {
   letter-spacing: -0.05em;
 }
-.tracking-wider {
-  letter-spacing: 0.05em;
-}
 .tracking-wide {
   letter-spacing: 0.025em;
+}
+.tracking-wider {
+  letter-spacing: 0.05em;
 }
 .text-blue-100 {
   --tw-text-opacity: 1;
@@ -1957,10 +1847,6 @@ video {
   --tw-text-opacity: 1;
   color: rgb(202 138 4 / var(--tw-text-opacity, 1));
 }
-.text-blue-500 {
-  --tw-text-opacity: 1;
-  color: rgb(59 130 246 / var(--tw-text-opacity, 1));
-}
 .underline {
   text-decoration-line: underline;
 }
@@ -2055,16 +1941,8 @@ video {
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.hover\:-translate-y-1:hover {
-  --tw-translate-y: -0.25rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
 .hover\:-translate-y-2:hover {
   --tw-translate-y: -0.5rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-.hover\:-translate-y-1\.5:hover {
-  --tw-translate-y: -0.375rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .hover\:border-primary:hover {
@@ -2190,9 +2068,6 @@ video {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(255 255 255 / var(--tw-ring-opacity, 1));
 }
-.group:hover .group-hover\:w-24 {
-  width: 6rem;
-}
 .group:hover .group-hover\:w-20 {
   width: 5rem;
 }
@@ -2204,11 +2079,6 @@ video {
 .group:hover .group-hover\:scale-110 {
   --tw-scale-x: 1.1;
   --tw-scale-y: 1.1;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-.group:hover .group-hover\:scale-150 {
-  --tw-scale-x: 1.5;
-  --tw-scale-y: 1.5;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .group:hover .group-hover\:bg-blue-200 {
@@ -2223,17 +2093,13 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(254 215 170 / var(--tw-bg-opacity, 1));
 }
-.group:hover .group-hover\:bg-purple-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(233 213 255 / var(--tw-bg-opacity, 1));
-}
-.group:hover .group-hover\:bg-green-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(220 252 231 / var(--tw-bg-opacity, 1));
-}
 .group:hover .group-hover\:bg-primary {
   --tw-bg-opacity: 1;
   background-color: rgb(48 173 209 / var(--tw-bg-opacity, 1));
+}
+.group:hover .group-hover\:bg-purple-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(233 213 255 / var(--tw-bg-opacity, 1));
 }
 .group:hover .group-hover\:text-primary {
   --tw-text-opacity: 1;
@@ -2244,6 +2110,10 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 @media (min-width: 640px) {
+
+  .sm\:h-16 {
+    height: 4rem;
+  }
 
   .sm\:grid-cols-1 {
     grid-template-columns: repeat(1, minmax(0, 1fr));
@@ -2261,6 +2131,11 @@ video {
     flex-direction: row;
   }
 
+  .sm\:px-10 {
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
+
   .sm\:px-4 {
     padding-left: 1rem;
     padding-right: 1rem;
@@ -2271,14 +2146,14 @@ video {
     padding-right: 1.5rem;
   }
 
-  .sm\:px-10 {
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
-  }
-
   .sm\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+
+  .sm\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
   }
 
   .sm\:text-base {
@@ -2291,14 +2166,9 @@ video {
     line-height: 1.75rem;
   }
 
-  .sm\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
-  }
-
-  .sm\:text-8xl {
-    font-size: 6rem;
-    line-height: 1;
+  .sm\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 }
 @media (min-width: 768px) {
@@ -2345,6 +2215,11 @@ video {
     padding-right: 3.5rem;
   }
 
+  .md\:px-16 {
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
+
   .md\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
@@ -2353,11 +2228,6 @@ video {
   .md\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
-  }
-
-  .md\:px-16 {
-    padding-left: 4rem;
-    padding-right: 4rem;
   }
 
   .md\:text-4xl {
@@ -2370,19 +2240,14 @@ video {
     line-height: 1;
   }
 
-  .md\:text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
-  }
-
   .md\:text-6xl {
     font-size: 3.75rem;
     line-height: 1;
   }
 
-  .md\:text-9xl {
-    font-size: 8rem;
-    line-height: 1;
+  .md\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 }
 @media (min-width: 1024px) {
@@ -2425,10 +2290,6 @@ video {
 
   .lg\:hidden {
     display: none;
-  }
-
-  .lg\:h-14 {
-    height: 3.5rem;
   }
 
   .lg\:h-16 {
@@ -2499,8 +2360,20 @@ video {
     flex-direction: row;
   }
 
+  .lg\:items-center {
+    align-items: center;
+  }
+
   .lg\:justify-normal {
     justify-content: normal;
+  }
+
+  .lg\:justify-start {
+    justify-content: flex-start;
+  }
+
+  .lg\:justify-between {
+    justify-content: space-between;
   }
 
   .lg\:gap-20 {
@@ -2550,9 +2423,19 @@ video {
     padding-right: 2.5rem;
   }
 
+  .lg\:px-12 {
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+
   .lg\:px-14 {
     padding-left: 3.5rem;
     padding-right: 3.5rem;
+  }
+
+  .lg\:px-20 {
+    padding-left: 5rem;
+    padding-right: 5rem;
   }
 
   .lg\:px-4 {
@@ -2603,16 +2486,6 @@ video {
   .lg\:py-8 {
     padding-top: 2rem;
     padding-bottom: 2rem;
-  }
-
-  .lg\:px-20 {
-    padding-left: 5rem;
-    padding-right: 5rem;
-  }
-
-  .lg\:px-12 {
-    padding-left: 3rem;
-    padding-right: 3rem;
   }
 
   .lg\:pb-20 {
