--- a/views/index.ejs
+++ b/views/index.ejs
@@ -171,13 +171,13 @@
   </div>
 
   <!-- Running Projects Section -->
-  <section class="mt-20 px-10">
+  <!-- <section class="mt-20 px-10">
     <h2 class="text-4xl font-bold text-center text-gray-900 mb-14">
       🌍 Running Projects Across Countries
     </h2>
 
     <div class="grid sm:grid-cols-2 lg:grid-cols-4 gap-8 mt-4">
-      <!-- India -->
+     
       <div
         class="bg-white rounded-2xl shadow-lg p-8 text-center transition-transform transform hover:-translate-y-2 hover:shadow-2xl"
         data-aos="fade-up" data-aos-duration="500">
@@ -188,7 +188,7 @@
         <p class="text-primary font-bold text-lg mt-2">120+ Projects</p>
       </div>
 
-      <!-- USA -->
+     
       <div
         class="bg-white rounded-2xl shadow-lg p-8 text-center transition-transform transform hover:-translate-y-2 hover:shadow-2xl"
         data-aos="fade-up" data-aos-duration="500" data-aos-delay="100">
@@ -199,7 +199,7 @@
         <p class="text-primary font-bold text-lg mt-2">80+ Projects</p>
       </div>
 
-      <!-- UK -->
+   
       <div
         class="bg-white rounded-2xl shadow-lg p-8 text-center transition-transform transform hover:-translate-y-2 hover:shadow-2xl"
         data-aos="fade-up" data-aos-duration="500" data-aos-delay="200">
@@ -210,7 +210,7 @@
         <p class="text-primary font-bold text-lg mt-2">60+ Projects</p>
       </div>
 
-      <!-- Australia -->
+    
       <div
         class="bg-white rounded-2xl shadow-lg p-8 text-center transition-transform transform hover:-translate-y-2 hover:shadow-2xl"
         data-aos="fade-up" data-aos-duration="500" data-aos-delay="300">
@@ -221,7 +221,7 @@
         <p class="text-primary font-bold text-lg mt-2">40+ Projects</p>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- Countries Section -->
 <section class="mt-20 px-5 sm:px-10 md:px-16 lg:px-20 py-16 rounded-xl mb-8">
